kb: add/update topics lld-hld-basics, replication-vs-sharding-vs-partitioning, caching, latency-and-throughput-zero-to-hero, monitoring-and-logging